# hen-rescue-hero

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.itch_io.toml  Trunk.release.toml  Trunk.toml  index.css  index.html  rust-toolchain.toml  rustfmt.toml
.github/shared-steps/: action.yml
.github/workflows/: build.yml  clippy.yml  test.yml
assets/: font.aseprite  overheated_bg.aseprite  sprite_sheet.aseprite
brp_game_base/: Cargo.toml
brp_game_base/src/: assets.rs  brp_assets.rs  brp_game_base.rs  brp_game_config.rs  brp_game_state.rs  brp_input.rs  color.rs  game_base.rs  game_config.rs  irect.rs  lib.rs  rect.rs
brp_game_base/src/brp_debug/: brp_debug_pause.rs  mod.rs
brp_game_base/src/brp_drawing/: brp_canvas_variant.rs  brp_draw.rs  brp_draw_queue.rs  brp_drawing_plugin.rs  brp_sprite.rs  mod.rs
brp_game_base/src/brp_font/: brp_font_config.rs  brp_font_glyph.rs  brp_font_plugin.rs  mod.rs
brp_game_base/src/debug/: debug_pause.rs  mod.rs
brp_game_base/src/drawing/: draw.rs  mod.rs  plugin.rs  queue.rs
dist_templates/web/: detect_touch.js  index.css  index.html
hrh_base/: Cargo.toml
hrh_base/src/: def.rs  lib.rs
hrh_game/: Cargo.toml
hrh_game/src/: abc.rs  animation.rs  canvas.rs  chicken.rs  collider.rs  font.rs  game.rs  images.rs  lib.rs  menu.rs  pico8_color.rs  position.rs  rail.rs  robot.rs  sprite.rs  sprites.rs
hrh_game/src/game_objects/: chicken.rs  countdown.rs  mod.rs  nest.rs  pile_of_chickens.rs  rail.rs  robot.rs  score.rs  side.rs
hrh_game/src/game_objects/robot/: mod.rs  robot_direction.rs  robot_ecs.rs  robot_speed.rs  robot_state.rs
hrh_game/src/input/: controls.rs  gamepad_controls.rs  keyboard_controls.rs  mod.rs  touch_controls.rs
hrh_game/src/logic/: chickens_catching.rs  chickens_go_to_nest.rs  mod.rs  overheating.rs  robot_catches_chickens.rs
hrh_game/src/menu/: menu_arrow_button.rs  menu_ecs.rs  menu_mode.rs  mod.rs
hrh_visualize_schedule/: Cargo.toml
hrh_visualize_schedule/src/: main.rs
mockup/: backup 01.aseprite  backup 02.aseprite  backup 03.aseprite  backup 04 - on a square canvas.aseprite  backup 05.aseprite  backup 06.aseprite  backup 07.aseprite  backup 08.aseprite  mockup.aseprite
src/: main.rs  zzz.rs
