[package]
name = "hen_rescue_hero"
description = "A simple web game in which as a tiny robot you try to rescue as many falling hens as possible. Made for Bevy Jam #3."
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
authors = ["Beetroot Paul <paul@beetrootpaul.com>"]
repository = "https://github.com/beetrootpaul/hen-rescue-hero"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy_dynamic_linking = ["hrh_game/bevy_dynamic_linking"]
bevy_x11 = ["hrh_game/bevy_x11"]

[dependencies]
hrh_game = { path = "./hrh_game" }

[workspace]
members = [
    "brp_game_base",
    "hrh_game",
    "hrh_visualize_schedule"
]
# Required for Bevy (see: https://bevy-cheatbook.github.io/pitfalls/build-errors.html?highlight=worksp#multi-crate-workspaces )
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_asset", "bevy_gilrs", "bevy_winit", "png"] }
bevy_pixels = { version = "0.9.0", default-features = false, features = [] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
wasm-bindgen = { version = "0.2.84" }