[package]
name = "hen_rescue_hero"
description = "A simple web game in which as a tiny robot you try to rescue as many falling hens as possible. Made for Bevy Jam #3."
version = "0.2.0"
edition = "2021"
rust-version = "1.68"
authors = ["Beetroot Paul <paul@beetrootpaul.com>"]
repository = "https://github.com/beetrootpaul/hen-rescue-hero"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beet_core = { path = "../beet_core" }
