[package]
name = "hrh_visualize_schedule"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy_dynamic_linking = ["hrh_game/bevy_dynamic_linking"]

[dependencies]
bevy_mod_debugdump = "0.7.0"
hrh_game = { path = "../hrh_game" }
